--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Smart Node -- CDI</title>
+    <script>
+      window.log = (msg, exp) => {
+        console.log('---', exp, msg, '---')
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
